--- a/style.css
+++ b/style.css
@@ -29,9 +29,15 @@
     height: 400px;
     background-repeat: no-repeat;
     background-size: cover;
+    text-align: center;
+    font-size: 50px;
+    padding-top: 200px;
+    color: #5C7785;
 }
 body{
-    background-color: #5C7785
+    background-color: #5C7785;
+    font-family: 'Ibarra Real Nova', serif;
+
 }
 .links{
     background-color: #30BBB3;
@@ -51,4 +57,10 @@ body{
 }
 .links a{
     color: #E4ECEE;
+}
+.who{
+    text-align: center;
+}
+.who p{
+    font-size: 20px;
 }
