--- a/style.css
+++ b/style.css
@@ -64,3 +64,31 @@ body{
 .who p{
     font-size: 20px;
 }
+.donationns{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 80px;
+}
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 300px;
+    height: 300px;
+  }
+  
+  div.gallery:hover {
+    border: 1px solid #777;
+  }
+  
+  div.gallery img {
+    width: 100%;
+    height: 200px;
+  }
+  
+  div.desc {
+    padding: 15px;
+    text-align: center;
+    font-size: 20px;
+    color: #16293D;
+  }
